# Nsight_LLM_analyzer

./: .gitignore  CMakeLists.txt  README.md  interactive_app.cpp  interactive_app.py  main.py  requirements.txt
mock_data/: nsight_data1.json  nsight_data2.json
nsight_analyzer/: llm_analyze.py
nsight_llm_analyzer/: llm_analyze.cpp  llm_analyze.h
nsight_llm_analyzer/output/: output_20240803_222908_nsight_data2.json.txt  output_20240803_230600_nsight_data1.json.txt  output_20240803_230640_nsight_data2.json.txt  output_20240803_230742_nsight_data1.json.txt  output_20240803_230847_nsight_data2.json.txt
output/: llm_analyze_output1.txt
static/: style.css
templates/: index.html
test/: test_llm_analyze.py
